--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,6 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/poupault.css")">
         <link rel="shortcut icon" type="image/ico" href="@routes.Assets.versioned("images/icon.png")" />
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Hammersmith+One" rel="stylesheet">
