--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,10 +12,31 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/poupault.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fab.css")">
         <link rel="shortcut icon" type="image/ico" href="@routes.Assets.versioned("images/icon.png")" />
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Hammersmith+One" rel="stylesheet">
         @moreStyles
+
+        @if(env.Env.isProd) {
+            @* FIXME Issue on Chrome :-( https://www.chromestatus.com/feature/5718547946799104 *@
+            @* FIXME Discussion : https://developers.google.com/web/updates/2016/08/removing-document-write *@
+            @* FIXME Possible solution : https://developers.google.com/analytics/solutions/experiments-client-side *@
+                <!-- Google Analytics Content Experiment code -->
+            <script>function utmx_section(){}function utmx(){}(function(){var
+                    k='146587008-0',d=document,l=d.location,c=d.cookie;
+                if(l.search.indexOf('utm_expid='+k)>0)return;
+                function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
+                indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
+                                length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
+                        '<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
+                                '://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
+                        '&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
+                        valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
+                        '" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
+            </script><script>utmx('url','A/B');</script>
+                <!-- End of Google Analytics Content Experiment code -->
+        }
 
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
